# DPO

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: train_config.yaml  train_config_tinyllama.yaml
scripts/: run_inference.slurm  run_interactive.slurm  run_training.slurm
src/: __init__.py  generate_data.py  inference.py  inference_llama3.py  train_dpo.py
src/data/: __init__.py  data_loader.py  generate_data.py
src/evaluation/: __init__.py  metrics.py  run_eval.py
src/inference/: __init__.py  inference.py  inference_llama3.py  interactive_cli.py
src/training/: __init__.py  train_dpo.py  trainer.py
src/utils/: _init__.py  config.py  prompts.py
tests/: test_data_loader.py  test_integration.py  test_training.py
